<resources>
    <string name="app_name">Kaavio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_sign_up">Sign Up</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="hint_user_name">User name</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_email">Confirm email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>

    <string name="action_sign_up">Sign Up</string>

</resources>