<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_sign_up">

    <fragment
        android:id="@+id/nav_sign_up"
        android:name="org.fuusio.kaavio.app.feature.signup.ui.SignUpFragment"
        android:label="@string/menu_sign_up"
        tools:layout="@layout/sign_up_fragment" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="org.fuusio.kaavio.app.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="org.fuusio.kaavio.app.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>